--- a/ros2_demo_python_nodes/params/params.yaml
+++ b/ros2_demo_python_nodes/params/params.yaml
@@ -1,5 +1,5 @@
 
-service_node:  
+text_to_speech_service_server:  
   ros__parameters:
     phrases: [ "Get out of my way!",
                "I am the mightiest of all the robots",
